<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoveProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu1">Menu1</string>
    <string name="menu2">Menu2</string>
    <string name="menu3">Menu3</string>
    <string name="left_menu1">Menu1</string>
    <string name="left_menu2">Menu2</string>
    <string name="left_menu3">Menu3</string>
    <string name="left_menu4">Menu4</string>
    <string name="left_menu5">Menu5</string>
    <string name="right_menu">立即登录</string>
    <string name="other_login">合作伙伴登陆:</string>
    <string name="cusor"></string>
    <string name="user_name">输入用户名</string>
    <string name="user_pwd">输入密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登录</string>
    <string name="zhuce">注册</string>
    <string name="chose_photo">点击选择头像</string>
    <string name="name">用户名:</string>
    <string name="password">密码:</string>
    <string name="nick">昵称:</string>
    <string name="age">年龄:</string>
    <string name="sex">性别:</string>
    <string name="sign">签名:</string>
    <string name="info">简介:</string>
    <string name="level">等级:</string>
    <string name="settings">设置</string>
    <string name="change_user">切换用户</string>
    <string name="dialog_title">窥望北韩的女孩</string>
    <string name="dialog_author">摄影/MrPan</string>
    <string name="title_activity_share">ShareActivity</string>
    
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>

</resources>
