<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_slidingmenu_left"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

		<LinearLayout
   			 android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical" >
      
   			<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <mrpan.android.loveproject.view.CircleImageView
            android:id="@+id/zhuce_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/biz_pc_main_info_profile_avatar_bg_dark" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:layout_toRightOf="@+id/zhuce_photo"
            android:text="@string/chose_photo"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/zhuce_name"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:gravity="center"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="5dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/zhuce_password"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:gravity="center"
            android:hint="@string/user_pwd"
            android:inputType="text"
            android:padding="5dp"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="#ffffff"
            android:textSize="19dp" />

        <RadioGroup
            android:id="@+id/zhuce_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">"

            <RadioButton
                android:id="@+id/zhuce_nan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="1"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/sex_fmale" />

            <RadioButton
                android:id="@+id/zhuce_nv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                 />
			<ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/sex_male" />

        </RadioGroup>

    </LinearLayout>
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="20dp"
    	android:layout_marginTop="10dp" >

		<TextView
		    android:layout_width="70dp"
		    android:layout_height="wrap_content"
		    android:text="@string/age"
		    android:textColor="#ffffff"
		    android:textSize="19dp" />

		<EditText
		    android:id="@+id/zhuce_age"
		    android:layout_width="68dp"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dp"
		    android:background="@drawable/login_et_bg"
		    android:ems="10"
		    android:gravity="center"
		    android:inputType="number"
		    android:padding="5dp"
		    android:textAlignment="center" >
		</EditText>

    </LinearLayout>
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textColor="#ffffff"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/zhuce_sign"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:ems="10"
            android:hint="“签名...”"
            android:inputType="text"
            android:padding="5dp"
            android:textAlignment="center" >
        </EditText>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="104dp"
        android:layout_gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/t"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="#ffffff"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/zhuce_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/t"
            android:background="@drawable/login_et_bg"
            android:ems="10"
            android:hint="对自我的一些简介"
            android:inputType="textMultiLine"
            android:padding="15dp" >

        </EditText>
    </LinearLayout>



        <Button
            android:id="@+id/zhuce_zhuce"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/zhuce_btn"
        	android:text="@string/zhuce"
        	android:textColor="#E3170D"/>
</LinearLayout>
    </ScrollView>

    

</LinearLayout>