<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_slidingmenu_left"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="60dp" >
    
    <RelativeLayout
        android:id="@+id/left_menu1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_weight="1"
        android:background="@drawable/menu_left"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_news" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/left_menu1"
            android:textColor="#99ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/left_menu1"
            android:textColor="#99ffffff"
            android:textSize="18dp" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/left_menu2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_weight="1"
        android:background="@drawable/menu_left"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_read" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView2"
            android:text="@string/left_menu2"
            android:textColor="#99ffffff"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignLeft="@+id/textView6"
            android:text="@string/left_menu2"
            android:textColor="#99ffffff"
            android:textSize="10dp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/left_menu3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@drawable/menu_left"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_local_news" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_alignLeft="@+id/textView3"
            android:text="@string/left_menu3"
            android:textColor="#99ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/left_menu3"
            android:textColor="#99ffffff"
            android:textSize="18dp" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/left_menu4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@drawable/menu_left"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_ties" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView4"
            android:text="@string/left_menu4"
            android:textColor="#99ffffff"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView4"
            android:layout_alignLeft="@+id/textView7"
            android:text="@string/left_menu4"
            android:textColor="#99ffffff"
            android:textSize="10dp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/left_menu5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/menu_left"
        android:clickable="true"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_pics" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/left_menu5"
            android:textColor="#99ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView5"
            android:text="@string/left_menu5"
            android:textColor="#99ffffff"
            android:textSize="18dp" />

    </RelativeLayout>

</LinearLayout>