<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >
	<RelativeLayout
	    android:id="@+id/menu_s"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bg_topbar" >

        	<Button
            	android:id="@+id/last_btn"
           	 	android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:layout_alignParentLeft="true"
            	android:layout_centerVertical="true"
            	android:background="@drawable/btn_new" />

        	<Button
            	android:id="@+id/next_btn"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignParentRight="true"
           	 	android:layout_centerVertical="true"
            	android:background="@drawable/btn_personal" />

       		<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_centerInParent="true"
            	android:text="@string/app_name"
            	android:textColor="#ffffffff"
            	android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menu_s">
"

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/menu_s"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/devide_line" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="No.1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/devide_line" />
        
        <ImageView android:id="@+id/imageView1" 
            android:layout_width="match_parent" 
            android:layout_height="170dp" 
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" 
            android:background="@drawable/back"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"  >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/dialog_title"
                android:textSize="18dp"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView2"
                android:text="@string/dialog_author"
                android:textSize="16dp"
                android:textColor="@color/grey" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="16dp"
                    android:text="27"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/date"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Nov,2015" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/chart_to_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/transparent" >

                <TextView
                    android:id="@+id/chatto_content"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/content_bg"
                    android:gravity="center_vertical"
                    android:text="英雄会成为英雄，总是因为想被人记住。"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_12" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>